--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,10 @@
-@font-face {
+/* @font-face {
 font-family: "HankenGrotesk";
 src: url('assets/fonts/HankenGrotesk-VariableFont_wght.ttf') format('truetype');
 font-weight: 400;
 font-style: normal;
 }
-
+ */
 
 /* Reset and fonts */
 * {
